Add strings from login activity template
Add the login template name and description strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,6 +115,8 @@
     <string name="template_fragment_and_viewmodel">Fragment + ViewModel</string>
     <string name="template_cpp">Native C++</string>
     <string name="template_cpp_description">Creates a new project with an Empty Activity configured to use JNI</string>
+    <string name="template_login">Basic Login Activity</string>
+    <string name="template_login_description">Create a basic login activity</string>
 
     <!-- Files -->
     <string name="save">Save</string>
