--- a/common/src/main/res/values-ru/strings.xml
+++ b/common/src/main/res/values-ru/strings.xml
@@ -17,11 +17,11 @@
 
 <resources>
     <string name="title_gradle_service_notification_channel">Служба сборки Android IDE Gradle</string>
-    <string name="msg_hex_color_code">Шестнадцатеричный цветовой код</string>
+    <string name="msg_hex_color_code">HEX-код</string>
     <string name="msg_color_picker_pick">Выбрать</string>
-    <string name="msg_chmod_exec">Настройка разрешений для исполняемого файла…</string>
+    <string name="msg_chmod_exec">Настройка разрешений для исполняемого файла&#8230;</string>
     <string name="msg_linking">Связывание %1$s с %2$s</string>
-    <string name="msg_extracting_hooks">Извлечение hook библиотек…</string>
+    <string name="msg_extracting_hooks">Извлечение hook библиотек&#8230;</string>
     <string name="msg_empty_package">Пустое имя пакета</string>
     <string name="msg_package_is_not_valid">Недопустимое имя пакета</string>
     <string name="msg_package_is_to_long">Длинное имя пакета</string>
